2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1874890 (Ulrich Voigt with contributions from Martin Hoeller):
    * source/org/jfree/chart/renderer/xy/XYStepRenderer.java
    (stepPoint): New field,
    (getStepPoint): New method,
    (setStepPoint): Likewise,
    (drawItem): Calculate step point using new field,
    (drawLine): New private method,
    (equals): New method override,
    (hashCode): Likewise.

2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Includes patches 1866446 and 1888422 from Rob Van der Sanden:
    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (maximumBarWidth): New field,
    (BoxAndWhiskerRenderer): Initialise maximumBarWidth,
    (setArtifactPaint): Simplify event firing,
    (setFillBox): Likewise,
    (setItemMargin): Likewise,
    (getMaximumBarWidth): New method,
    (setMaximumBarWidth): Likewise,
    (initialise): Use new maximumBarWidth attribute,
    (drawHorizontalItem): Use correct data area dimension, and check for
    visibility of average marker,
    (drawVerticalItem): Check for visibility of average marker,
    (equals): Minor clean-up.

2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Fixes bug 1892707:
    * source/org/jfree/chart/text/TextBox.java
    (draw): Correct alignment of content with respect to interior padding.

2007-12-20  David Gilbert  <david.gilbert@object-refinery.com>

    Fixes bug 1848961:
    * source/org/jfree/chart/renderer/category/GroupedStackedBarRenderer.java
    (calculateBarW0): Use correct dataset index.
    
2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(createBufferedImage(int, int, ChartRenderingInfo)): Change image type,
	(createBufferedImage(int, int, double, double, ChartRenderingInfo)): 
	Likewise. 
	
2007-12-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java