@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ------------
  * LogAxis.java
  * ------------
- * (C) Copyright 2006, 2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2006-2008, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -40,6 +40,8 @@
  * 02-Jul-2007 : Added entity support for axis labels (DG);
  * 12-Jul-2007 : Fixed zooming bug, and updated for API changes in super 
  *               class (DG);
+ * 14-Feb-2008 : Changed default minorTickCount to 9 - see bug report 
+ *               1892419 (DG);
  *
  */
 
@@ -108,7 +110,7 @@ public class LogAxis extends ValueAxis {
         super(label,  createLogTickUnits(Locale.getDefault()));
         setDefaultAutoRange(new Range(0.01, 1.0));
         this.tickUnit = new NumberTickUnit(1.0, new DecimalFormat("0.#"));
-        this.minorTickCount = 10;
+        this.minorTickCount = 9;
     }
     
     /**
